[package]
name = "wxrust-config"
version = "0.0.1-alpha2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wx-x86_64-pc-windows-msvc = { git = "https://github.com/kenz-gelsoft/wx-x86_64-pc-windows-msvc", optional = true }
wx-x86_64-pc-windows-gnu  = { git = "https://github.com/ancwrd1/wx-x86_64-pc-windows-gnu", optional = true }
wx-universal-apple-darwin = { git = "https://github.com/ancwrd1/wx-universal-apple-darwin", optional = true }

[features]
vendored = [
    "dep:wx-x86_64-pc-windows-msvc",
    "dep:wx-x86_64-pc-windows-gnu",
    "dep:wx-universal-apple-darwin",
]
